--- a/src/html/display.html
+++ b/src/html/display.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" />
-  <link rel="stylesheet" href="/css/style.css?v=1" />
-  <link rel="stylesheet" href="/css/display.css?v=1" />
+  <link rel="stylesheet" href="/assets/css/style.css?v=2" />
+  <link rel="stylesheet" href="/assets/css/display.css?v=2" />
   <title>Simple Antrian</title>
 </head>
 
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <script src="/js/display.js?v=1"></script>
+  <script src="/assets/js/display.js?v=2"></script>
 </body>
 
 </html>
