--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" />
-  <link rel="stylesheet" href="/css/style.css?v=1" />
+  <link rel="stylesheet" href="/assets/css/style.css?v=2" />
   <title>Simple Antrian</title>
 </head>
 
@@ -59,7 +59,7 @@
       </form>
     </div>
   </div>
-  <script src="/js/home.js?v=1"></script>
+  <script src="/assets/js/home.js?v=2"></script>
 </body>
 
 </html>
