--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="data:,">
-  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" />
+  <link rel="stylesheet" href="/public/css/pure.min.css" />
   <link rel="stylesheet" href="/assets/css/style.css?v=2" />
   <title>Simple Antrian</title>
 </head>
@@ -54,6 +54,7 @@
           <br />
           <span>Action</span>
           <hr />
+          <button type="button" class="pure-button button-success" onclick="resetDisplay()">Reset Display</button>
           <button type="button" class="pure-button button-error" onclick="logout()">Logout</button>
         </fieldset>
       </form>
